@@ -14,6 +14,7 @@ dillo-2.1
  - Cleaned up resource embedding (forms)
  - Made cookierc parsing more robust.
  - Switched a_UIcmd_save() to take its URL from history (not location bar).
+ - Set prefs.vw_fontname as deafult font for the UI.
    Patches: place (AKA corvid)
 +- Switched SSL-enabled to configure.in (./configure --enable-ssl).
  - Standardised the installation of dpid/dpidrc with auto* tools.
